// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1611807442787,
      "mascota": "Kiara",
      "propietario": "Marco",
      "sintomas": "Solo duerme",
      "telefono": "33434321",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1611807442787,
      "mascota": "Roco",
      "propietario": "Marco",
      "sintomas": "Solo duerme",
      "telefono": "33434321",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar una cita 1`] = `
Citas {
  "citas": Array [],
}
`;
